1.6/_sources/modules/generated/sklearn.multiclass.OneVsOneClassifier.rst.txt
OneVsOneClassifier
==================

.. currentmodule:: sklearn.multiclass

.. autoclass:: OneVsOneClassifier
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.multiclass.OneVsOneClassifier sklearn.multiclass.OneVsOneClassifier.__init__ sklearn.multiclass.OneVsOneClassifier.decision_function sklearn.multiclass.OneVsOneClassifier.fit sklearn.multiclass.OneVsOneClassifier.get_metadata_routing sklearn.multiclass.OneVsOneClassifier.get_params sklearn.multiclass.OneVsOneClassifier.partial_fit sklearn.multiclass.OneVsOneClassifier.predict sklearn.multiclass.OneVsOneClassifier.score sklearn.multiclass.OneVsOneClassifier.set_params sklearn.multiclass.OneVsOneClassifier.set_partial_fit_request sklearn.multiclass.OneVsOneClassifier.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -