1.7/_sources/modules/generated/sklearn.multiclass.OneVsOneClassifier.rst.txt
OneVsOneClassifier
==================

.. currentmodule:: sklearn.multiclass

.. autoclass:: OneVsOneClassifier
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.multiclass.OneVsOneClassifier sklearn.multiclass.OneVsOneClassifier.__delattr__ sklearn.multiclass.OneVsOneClassifier.__dir__ sklearn.multiclass.OneVsOneClassifier.__eq__ sklearn.multiclass.OneVsOneClassifier.__format__ sklearn.multiclass.OneVsOneClassifier.__ge__ sklearn.multiclass.OneVsOneClassifier.__getattribute__ sklearn.multiclass.OneVsOneClassifier.__getstate__ sklearn.multiclass.OneVsOneClassifier.__gt__ sklearn.multiclass.OneVsOneClassifier.__hash__ sklearn.multiclass.OneVsOneClassifier.__init__ sklearn.multiclass.OneVsOneClassifier.__init_subclass__ sklearn.multiclass.OneVsOneClassifier.__le__ sklearn.multiclass.OneVsOneClassifier.__lt__ sklearn.multiclass.OneVsOneClassifier.__ne__ sklearn.multiclass.OneVsOneClassifier.__new__ sklearn.multiclass.OneVsOneClassifier.__reduce__ sklearn.multiclass.OneVsOneClassifier.__reduce_ex__ sklearn.multiclass.OneVsOneClassifier.__repr__ sklearn.multiclass.OneVsOneClassifier.__setattr__ sklearn.multiclass.OneVsOneClassifier.__setstate__ sklearn.multiclass.OneVsOneClassifier.__sizeof__ sklearn.multiclass.OneVsOneClassifier.__sklearn_clone__ sklearn.multiclass.OneVsOneClassifier.__sklearn_tags__ sklearn.multiclass.OneVsOneClassifier.__str__ sklearn.multiclass.OneVsOneClassifier.__subclasshook__ sklearn.multiclass.OneVsOneClassifier._build_request_for_signature sklearn.multiclass.OneVsOneClassifier._get_default_requests sklearn.multiclass.OneVsOneClassifier._get_doc_link sklearn.multiclass.OneVsOneClassifier._get_metadata_request sklearn.multiclass.OneVsOneClassifier._get_param_names sklearn.multiclass.OneVsOneClassifier._get_params_html sklearn.multiclass.OneVsOneClassifier._html_repr sklearn.multiclass.OneVsOneClassifier._repr_html_inner sklearn.multiclass.OneVsOneClassifier._repr_mimebundle_ sklearn.multiclass.OneVsOneClassifier._validate_params sklearn.multiclass.OneVsOneClassifier.decision_function sklearn.multiclass.OneVsOneClassifier.fit sklearn.multiclass.OneVsOneClassifier.get_metadata_routing sklearn.multiclass.OneVsOneClassifier.get_params sklearn.multiclass.OneVsOneClassifier.partial_fit sklearn.multiclass.OneVsOneClassifier.predict sklearn.multiclass.OneVsOneClassifier.score sklearn.multiclass.OneVsOneClassifier.set_params sklearn.multiclass.OneVsOneClassifier.set_partial_fit_request sklearn.multiclass.OneVsOneClassifier.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -